# el_decko_backend_obs_ws

./: README.md  pypi.sh  pyproject.toml
src/: README.md
src/edb_obs_ws/: __init__.py  endpoints.py
