[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "el_decko_backend_obs_ws"
dynamic = ["version", "readme"]
description = "El Decko OBS Studio Websocket Backend"
license = { text = "GPL-3"}
dependencies = [
    "simpleobsws",
    "xdg"
]

[project.scripts]
edb-obsws = "edb_obs_ws:edb_run"

[project.entry-points."edb"]
start = "edb_obs_ws:edb_run"
stop = "edb_obs_ws:edb_stop"
fire = "edb_obs_ws:edb_fire_event"
get_events = "edb_obs_ws:edb_available_events"

[tool.setuptools.dynamic]
version = {attr = "edb_obs_ws.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools]
include-package-data = true
platforms = ["Linux"]